fixing wrong spelling

--- a/views/admin/agendamento/agendamento.njk
+++ b/views/admin/agendamento/agendamento.njk
@@ -63,8 +63,9 @@
     {%endblock%}
 
     {%block content%}
-        <h1 class='title'>Agendamentos</h1>
         <div class="table-wrapper agendamento">
+            <h1 class='title'>Agendamentos</h1>
+
             <div class="title table-nav">
 
                
@@ -77,7 +78,7 @@
                 </form>
                 
 
-                <a href="/dashboard/agendamento/criar/search" class="add">+ Agendamento</a>
+                <a href="/dashboard/agendamento/criar/search" class="add">Novo Agendamento</a>
             </div>
 
             {% for mensagem in msg %}
