--- a/views/admin/agendamento/search-agendamento.njk
+++ b/views/admin/agendamento/search-agendamento.njk
@@ -75,7 +75,7 @@
                     </button>
                 </form>
 
-                <a href="/dashboard/agendamento/criar/search" class="add">+ Agendamento</a>
+                <a href="/dashboard/agendamento/criar/search" class="add">Novo Agendamento</a>
             </div>
 
             {% for mensagem in msg%}
