--- a/views/admin/financeiro/pagamentos.njk
+++ b/views/admin/financeiro/pagamentos.njk
@@ -99,7 +99,7 @@
                     </div>
                     
 
-                    <a href="/dashboard/financeiro/criar/search" class="add">+ Pagamento</a>
+                    <a href="/dashboard/financeiro/criar/search" class="add">Novo Pagamento</a>
                 </div>
 
 
