--- a/views/admin/gerenciamento/clientes/clientes.njk
+++ b/views/admin/gerenciamento/clientes/clientes.njk
@@ -93,7 +93,7 @@
                 </div>
 
 
-                <a href="/dashboard/cadastro/cliente" class="add">+ Cliente</a>
+                <a href="/dashboard/cadastro/cliente" class="add">Novo Cliente</a>
             </div>
 
             {% for mensagem in msg%}
