--- a/views/admin/gerenciamento/clientes/search.njk
+++ b/views/admin/gerenciamento/clientes/search.njk
@@ -91,7 +91,7 @@
                         </select>
                 </div>
 
-                <a href="/dashboard/cadastro/cliente" class="add">+ Cliente</a>
+                <a href="/dashboard/cadastro/cliente" class="add">Novo Cliente</a>
             </div>
 
 
