--- a/views/admin/gerenciamento/funcionarios/search.njk
+++ b/views/admin/gerenciamento/funcionarios/search.njk
@@ -91,7 +91,7 @@
                         </select>
                 </div>
 
-                <a href="/dashboard/cadastro/funcionario" class="add">+ Funcionario</a>
+                <a href="/dashboard/cadastro/funcionario" class="add">Novo Funcionario</a>
             </div>
 
 
