--- a/views/admin/gerenciamento/instrutores/search.njk
+++ b/views/admin/gerenciamento/instrutores/search.njk
@@ -91,7 +91,7 @@
                         </select>
                 </div>
 
-                <a href="/dashboard/cadastro/instrutor" class="add">+ Instrutor</a>
+                <a href="/dashboard/cadastro/instrutor" class="add">Novo Instrutor</a>
             </div>
 
 
