--- a/views/atendente/agendamento/search-agendamento.njk
+++ b/views/atendente/agendamento/search-agendamento.njk
@@ -70,7 +70,7 @@
                     </button>
                 </form>
 
-                <a href="/acadmin/agendamento/criar/search/cliente" class="add">+ Agendamento</a>
+                <a href="/acadmin/agendamento/criar/search/cliente" class="add">Novo Agendamento</a>
             </div>
 
             {% for mensagem in msg%}
