--- a/views/atendente/financeiro/pagamentos.njk
+++ b/views/atendente/financeiro/pagamentos.njk
@@ -87,7 +87,7 @@
                     </div>
                     
 
-                    <a href="/acadmin/financeiro/criar/search" class="add">+ Pagamento</a>
+                    <a href="/acadmin/financeiro/criar/search" class="add">Novo Pagamento</a>
                 </div>
 
 
