--- a/views/atendente/gerenciamento/clientes/clientes.njk
+++ b/views/atendente/gerenciamento/clientes/clientes.njk
@@ -80,7 +80,7 @@
                 </div>
 
 
-                <a href="/acadmin/cadastro/cliente" class="add">+ Cliente</a>
+                <a href="/acadmin/cadastro/cliente" class="add">Novo Cliente</a>
             </div>
 
             {% for mensagem in msg%}
