--- a/views/atendente/gerenciamento/clientes/search.njk
+++ b/views/atendente/gerenciamento/clientes/search.njk
@@ -79,7 +79,7 @@
                         </select>
                 </div>
 
-                <a href="/acadmin/cadastro/cliente" class="add">+ Cliente</a>
+                <a href="/acadmin/cadastro/cliente" class="add">Novo Cliente</a>
             </div>
 
 
