--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -4,6 +4,7 @@ aside{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
     min-height: 100vh;
     background-color: #2d2d2d;
 
