--- a/views/admin/gerenciamento/funcionarios/funcionarios.njk
+++ b/views/admin/gerenciamento/funcionarios/funcionarios.njk
@@ -92,7 +92,7 @@
                         </select>
                 </div>
 
-                <a href="/dashboard/cadastro/funcionario" class="add">+ Funcionario</a>
+                <a href="/dashboard/cadastro/funcionario" class="add">Novo Funcionario</a>
             </div>
 
             {% for mensagem in msg%}
