--- a/views/atendente/agendamento/agendamento.njk
+++ b/views/atendente/agendamento/agendamento.njk
@@ -72,7 +72,7 @@
                    
                 </form>
                 
-                <a href="/acadmin/agendamento/criar/search/cliente" class="add">+ Agendamento</a>
+                <a href="/acadmin/agendamento/criar/search/cliente" class="add">Novo Agendamento</a>
             </div>
 
             {% for mensagem in msg %}
