--- a/views/atendente/financeiro/search-pagamento.njk
+++ b/views/atendente/financeiro/search-pagamento.njk
@@ -88,7 +88,7 @@
                     </div>
                     
 
-                    <a href="/acadmin/financeiro/criar/search" class="add">+ Pagamento</a>
+                    <a href="/acadmin/financeiro/criar/search" class="add">Novo Pagamento</a>
                 </div>
 
 
