--- a/views/admin/agendamento/agendamento.njk
+++ b/views/admin/agendamento/agendamento.njk
@@ -96,8 +96,8 @@
                 <li>Modalidade</li>
                 <li>Instrutor</li>
                 <li>Dia</li>
-                <li>Hora Inicio: </li>
-                <li>Hora Termina: </li>
+                <li> início </li>
+                <li>Término </li>
                 <li>Acões</li>
             </ul>
         </div>
