--- a/views/admin/agendamento/historico.njk
+++ b/views/admin/agendamento/historico.njk
@@ -89,19 +89,19 @@
                             <li>Modalidade</li>
                             <li>Instrutor</li>
                             <li>Dia</li>
-                            <li>Hora Inicio: </li>
-                            <li>Hora Termina: </li>
+                            <li> início </li>
+                            <li>Término </li>
                             <li>Status: </li>
                             <li>Acões</li>
                         </ul>
                     </div>
 
-                    <div class="row agendamento">
+                    <div class="table">
                         
 
 
                             {% for agendamento in agendamentos %}
-                             <div class="row">
+                             <div class="row agendamento">
                                 <ul>
                                     {# <li>{{agendamento.clienteNome}} </li> #}
                                     <li>{{agendamento.modalidade}} </li>
