--- a/views/admin/financeiro/search-cliente.njk
+++ b/views/admin/financeiro/search-cliente.njk
@@ -116,7 +116,7 @@
                                             
                                             <a href="/dashboard/financeiro/criar-novo/pagamento/{{cliente._id}}" class="ver act-btn"><ion-icon name="cash-outline" class="icon"></ion-icon> Nova Cobrança</a>
 
-                                            <a href="/dashboard/financeiro/pagamento/historico/{{cliente._id}}" class="editar act-btn"><ion-icon name="reader-outline" class="icon"></ion-icon>Historico de pagamentos</a>
+                                            <a href="/dashboard/financeiro/pagamento/historico/{{cliente._id}}" class="editar act-btn"><ion-icon name="reader-outline" class="icon"></ion-icon>Historico pagamentos</a>
                                         
                                         </li>
 
