--- a/public/styles/gerenciamento.css
+++ b/public/styles/gerenciamento.css
@@ -98,27 +98,36 @@
     border-right: 1px solid #ccc;
     
     word-wrap: break-word;
-    padding: 10px;
+    padding: 10px 5px;
 }
 
 
 /* actions */
 .row ul .actions{
     display: flex;
-    
     gap: 0 5px;
     align-items: center;
     justify-content: flex-end;
 }
-
+.act-btn.unico-item{
+    flex-grow: 1;
+    justify-content: center;
+    flex-basis: 0;
+}
 
 .actions .act-btn{
     display: flex;
     align-items: center;
     justify-items: center;
     
-    max-height: 30px;
-    padding: 5px 10px;
+    /* max-height: 30px; */
+    /* padding: 10px 5px; */
+
+    padding: 5px;
+
+    flex-grow: 1;
+    justify-content: center;
+    flex-basis: 0;
 }
 .actions .act-btn .icon{
     font-size: 1.25em;
