--- a/public/styles/portal/user-financeiro.css
+++ b/public/styles/portal/user-financeiro.css
@@ -9,12 +9,13 @@
     width: 100%;
     background-color: whitesmoke;
 
+    border: 1px solid #444;
     color: black;
     border-top-left-radius: 5px ;
     border-top-right-radius: 5px;
 }
 .finance-head{
-    border-bottom: 3px #444 solid;
+    border-bottom: 2px #444 solid;
 }
 .finance-head ul li{
     list-style: none;
