--- a/views/atendente/financeiro/search-cliente.njk
+++ b/views/atendente/financeiro/search-cliente.njk
@@ -113,7 +113,7 @@
                                             
                                             <a href="/acadmin/financeiro/criar-novo/pagamento/{{cliente._id}}" class="ver act-btn"><ion-icon name="cash-outline" class="icon"></ion-icon> Nova Cobrança</a>
 
-                                            <a href="/acadmin/financeiro/pagamento/historico/{{cliente._id}}" class="editar act-btn"><ion-icon name="reader-outline" class="icon"></ion-icon>Historico de pagamentos</a>
+                                            <a href="/acadmin/financeiro/pagamento/historico/{{cliente._id}}" class="editar act-btn"><ion-icon name="reader-outline" class="icon"></ion-icon>Historico Pagamentos</a>
                                         
                                         </li>
 
