--- a/views/portal/agendamento/historico.njk
+++ b/views/portal/agendamento/historico.njk
@@ -71,19 +71,19 @@
                             <li>Modalidade</li>
                             <li>Instrutor</li>
                             <li>Dia</li>
-                            <li>Hora Inicio: </li>
-                            <li>Hora Termina: </li>
+                            <li> início </li>
+                            <li>Término </li>
                             <li>Status: </li>
                             <li>Acões</li>
                         </ul>
                     </div>
 
-                    <div class="row agendamento">
+                    <div class="table">
                         
 
 
                             {% for agendamento in agendamentos %}
-                             <div class="row">
+                             <div class="row agendamento">
                                 <ul>
                                     <li>{{agendamento.modalidade}} </li>
                                     <li>{{agendamento.instrutorNome}}</li>
@@ -92,16 +92,24 @@
                                     <li>{{agendamento.horarioTermina}}</li>
                                     <li>{{agendamento.status}}</li>
 
-                                    <li class="actions historico">
-                                        <a href="/portal/agendamento/ver/{{agendamento._id}}" class="ver act-btn"><ion-icon class="icon" name="eye-outline"></ion-icon> ver</a>
 
-                                        <a class="editar act-btn" href="/portal/agendamento/edit/{{agendamento._id}}"><ion-icon class="icon"  name="pencil-outline"></ion-icon> Editar</a>
+
+                                    <li class="actions historico">
+                                        <a href="/portal/agendamento/ver/{{agendamento._id}}" class="ver act-btn {%if agendamento.status == "Inativo"%} unico-item{%endif%}"><ion-icon class="icon" name="eye-outline"></ion-icon> ver</a>
+
+
+                                        {% if agendamento.status == "Ativo" %}
+                                            <a class="editar act-btn" href="/portal/agendamento/edit/{{agendamento._id}}"><ion-icon class="icon"  name="pencil-outline"></ion-icon> Editar</a>
 
                                         
-                                        <form action="/portal/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST" class="position-relative">
-                                            
-                                            <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="trash-outline"></ion-icon> Deletar </button>
-                                        </form>
+                                            <form action="/portal/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST" class="position-relative">
+                                                
+                                                <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="trash-outline"></ion-icon> Deletar </button>
+                                            </form>
+                                            {%else%}
+                                        {% endif %}
+
+                                        
                                             
                                     </li>
 
