--- a/views/admin/gerenciamento/funcionarios/funcionarios.njk
+++ b/views/admin/gerenciamento/funcionarios/funcionarios.njk
@@ -83,7 +83,7 @@
                     </button>
                 </form>
 
-                <div class="filtro-contaienr">
+                <div class="filtro-container">
                         <label for="filtro">Filtrar por Status:</label>
                         <select name="filtro" id="filtro">
                             <option value="">Todos</option>
