--- a/views/admin/relatorio/financeiro/completo.njk
+++ b/views/admin/relatorio/financeiro/completo.njk
@@ -97,6 +97,7 @@
             color: white;
             border-top-left-radius: 5px ;
             border-top-right-radius: 5px;
+            align-items: center;
 
         }
        
