--- a/views/atendente/agendamento/search-cliente.njk
+++ b/views/atendente/agendamento/search-cliente.njk
@@ -81,7 +81,7 @@
         {% endfor %}
 
         <div class="table-wrapper">
-            <div class="title table-nav">
+            <div class="title table-nav escolhe-cliente">
                 <h1>Pesquisar</h1>
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/criar/search/cliente">
@@ -90,6 +90,16 @@
                         <ion-icon name="search-outline"></ion-icon>
                     </button>
                 </form>
+
+                <div class="filtro-container">
+                        <label for="filtro">Filtrar por Status:</label>
+                        <select name="filtro" id="filtro">
+                            <option value="">Todos</option>
+                            <option value="Ativo">Ativo</option>
+                            <option value="Inativo">Inativo</option>
+                        </select>
+                </div>
+
             </div>
     
     
@@ -105,12 +115,12 @@
                             </ul>
                         </div>
 
-                        <div class="table">
+                        <div class="table" id="cliente-list">
                             
 
                             {% for cliente in clientesAcademia %}
 
-                                <div class="row search-cliente">
+                                <div class="row search-cliente" data-status="{{cliente.status}}">
                                     <ul>
                                         <li>{{cliente.nome}} {{cliente.sobrenome}}</li>
                                         <li>{{cliente.email}}</li>
@@ -148,5 +158,5 @@
 {%block scripts%}
     
     <script src="/scripts/flashmsg.js"></script>
-
+    <script src="/scripts/filtroCliente.js"></script>
 {%endblock%}
