--- a/views/portal/financeiro/user-pagamentos.njk
+++ b/views/portal/financeiro/user-pagamentos.njk
@@ -52,7 +52,7 @@
             <h1>Financeiro </h1>
 
             <div class="title table-nav">
-                        <div class="filtro-contaienr">
+                        <div class="filtro-container">
                             <label for="filtro">Filtrar por Status:</label>
                             <select name="filtro" id="filtro">
                                 <option value="">Todos</option>
