--- a/public/styles/cadastro.css
+++ b/public/styles/cadastro.css
@@ -3,7 +3,7 @@
 form{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
-    gap: 30px;
+    gap: 15px 30px;
 
     /* padding: 40px; */
 }
@@ -12,8 +12,8 @@ form{
     background-color: whitesmoke;
     color: black;
     
-    padding: 40px 60px;
-    border-radius: 5px;
+    padding: 20px 60px;
+    border-radius: 0 0 5px;
     
     display: block;
     
@@ -63,6 +63,7 @@ form button{
     cursor: pointer;
 
     border-radius: 5px;
+    margin-top: 10px;
 }
 
 .form-wrapper input, .form-wrapper button, .form-wrapper select{
@@ -78,7 +79,7 @@ input, select{
     border: 1px solid teal;
 }
 .form-wrapper h1{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .container{
