--- a/public/styles/pagamentos.css
+++ b/public/styles/pagamentos.css
@@ -86,8 +86,7 @@
 
 
 .pagamentos .table-nav{
-    grid-template-columns: 3fr 1fr 1fr;
-    /* grid-template-columns: 3fr 1fr; */
+    grid-template-columns: 1.5fr 3fr 1fr;
 
 }
 
@@ -186,4 +185,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.details-btn{
+    cursor: pointer;
 }
