--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -119,3 +119,18 @@
   display: none;
   overflow: hidden;
 }
+
+
+/* filtro */
+.filtro-container label{
+  font-weight: bold;
+  font-size: 1.125em;
+}
+.filtro-container select{
+  background-color: #424242;
+  color: white;
+
+  border: none;
+  padding: 5px 6px;
+  border-radius: 5px;
+}
