--- a/views/admin/financeiro/search-pagamento.njk
+++ b/views/admin/financeiro/search-pagamento.njk
@@ -79,16 +79,7 @@
 
                 <div class="title table-nav">
 
-                
-
-                    <form class="search-form" role="search" method="POST" action="/dashboard/financeiro/pagamentos/search" >
-                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
-                    <button type="submit" class="searchButton">
-                        <ion-icon name="search-outline"></ion-icon>
-                    </button>
-                    </form>
-                    
-                    <div class="filtro-contaienr">
+                     <div class="filtro-container">
                         <label for="filtro">Filtrar por Status:</label>
                         <select name="filtro" id="filtro">
                             <option value="">Todos</option>
@@ -98,6 +89,15 @@
                         </select>
                     </div>
                     
+
+                    <form class="search-form" role="search" method="POST" action="/dashboard/financeiro/pagamentos/search" >
+                    <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                    <button type="submit" class="searchButton">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
+                    </form>
+                    
+                   
 
                     <a href="/dashboard/financeiro/criar/search" class="add">Novo Pagamento</a>
                 </div>
