--- a/views/admin/gerenciamento/clientes/search.njk
+++ b/views/admin/gerenciamento/clientes/search.njk
@@ -82,7 +82,7 @@
                     </button>
                 </form>
 
-                <div class="filtro-contaienr">
+                <div class="filtro-container">
                         <label for="filtro">Filtrar por Status:</label>
                         <select name="filtro" id="filtro">
                             <option value="">Todos</option>
