--- a/views/admin/relatorio/financeiro/saidas.njk
+++ b/views/admin/relatorio/financeiro/saidas.njk
@@ -98,6 +98,7 @@
             color: white;
             border-top-left-radius: 5px ;
             border-top-right-radius: 5px;
+            align-items: center;
 
         }
        
