--- a/views/admin/relatorio/funcionarios/completo.njk
+++ b/views/admin/relatorio/funcionarios/completo.njk
@@ -95,6 +95,8 @@
                     border-top-left-radius: 5px ;
                     border-top-right-radius: 5px;
 
+                    align-items: center;
+
                 }
             
                 .finance-head ul li{
