--- a/views/atendente/financeiro/search-cliente.njk
+++ b/views/atendente/financeiro/search-cliente.njk
@@ -72,7 +72,7 @@
         </div>
 
         <div class="table-wrapper">
-            <div class="title table-nav">
+            <div class="title table-nav escolhe-cliente">
                 <h1>Pesquisar</h1>
 
                 <form class="search-form" role="search" method="POST" action="/acadmin/financeiro/criar/search">
@@ -81,13 +81,22 @@
                         <ion-icon name="search-outline"></ion-icon>
                     </button>
                 </form>
+
+                <div class="filtro-container">
+                        <label for="filtro">Filtrar por Status:</label>
+                        <select name="filtro" id="filtro">
+                            <option value="">Todos</option>
+                            <option value="Ativo">Ativo</option>
+                            <option value="Inativo">Inativo</option>
+                        </select>
+                </div>
             </div>
 
 
             {% if clientesAcademia.length > 0 %}
             
                 {%block table%}
-                        <div class="table-head pagamentos">
+                        <div class="table-head search-cliente">
                             <ul>
                                 <li>Nome</li>
                                 <li>Email</li>
@@ -97,12 +106,12 @@
                             </ul>
                         </div>
 
-                        <div class="table">
+                        <div class="table" id="cliente-list">
                             
 
                             {% for cliente in clientesAcademia %}
 
-                                <div class="row pagamentos">
+                                <div class="row search-cliente" data-status="{{cliente.status}}">
                                     <ul>
                                         <li>{{cliente.nome}} {{cliente.sobrenome}}</li>
                                         <li>{{cliente.email}}</li>
@@ -139,6 +148,6 @@
 {%endblock%}
 
 
-
 {%block scripts%}
+        <script src="/scripts/filtroCliente.js"></script>
 {%endblock%}
