--- a/views/admin/agendamento/criar-novo.njk
+++ b/views/admin/agendamento/criar-novo.njk
@@ -85,16 +85,20 @@
         {% endfor %}
 
       <div class="ver-menu">
-            <ul>
-                <li><a href="/dashboard/agendamento">Agendamentos</a> ></li>
-            </ul>
+           <nav>
 
-             <ul>
-                <li><a  href="/dashboard/agendamento/criar/search">Cliente</a> ></li>
-            </ul>
-             <ul>
-                <li> Novo agendamento </li>
-            </ul>
+                <ul>
+                    <li><a href="/dashboard/agendamento">Agendamentos</a> ></li>
+                </ul>
+
+                <ul>
+                    <li><a  href="/dashboard/agendamento/criar/search">Cliente</a> ></li>
+                </ul>
+                <ul>
+                    <li> Novo agendamento </li>
+                </ul>
+
+           </nav>
         </div>
 
 
