--- a/views/admin/agendamento/historico.njk
+++ b/views/admin/agendamento/historico.njk
@@ -67,15 +67,18 @@
 {% block content %}
         <h1>{{nomeCompleto}} - Historico de Agendamentos</h1>
        <div class="ver-menu">
-            <ul>
-                <li><a href="/dashboard/agendamento">Agendamentos</a> ></li>
-            </ul>
-            <ul>
-                <li><a href="/dashboard/agendamento/criar/search">Cliente</a> ></li>
-            </ul>
-            <ul>
-                <li> Historico de Agendamento </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/dashboard/agendamento">Agendamentos</a> > </li>
+                </ul>
+                <ul>
+                    <li><a href="/dashboard/agendamento/criar/search">Cliente</a> > </li>
+                </ul>
+                <ul>
+                    <li> Historico de Agendamento </li>
+                </ul>
+            </nav>
+            
         </div>
 
 
