--- a/views/admin/financeiro/historico.njk
+++ b/views/admin/financeiro/historico.njk
@@ -67,15 +67,18 @@
 {% block content %}
         <h1>Historico de pagamentos</h1>
        <div class="ver-menu">
-            <ul>
-                <li><a href="/dashboard/financeiro/pagamentos">Pagamentos</a> ></li>
-            </ul>
-            <ul>
-                <li><a href="/dashboard/financeiro/criar/search">Cliente</a> ></li>
-            </ul>
-            <ul>
-                <li> Historico de pagamento </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/dashboard/financeiro/pagamentos">Pagamentos</a> ></li>
+                </ul>
+                <ul>
+                    <li><a href="/dashboard/financeiro/criar/search">Cliente</a> ></li>
+                </ul>
+                <ul>
+                    <li> Historico de pagamento </li>
+                </ul>
+            </nav>
+            
         </div>
 
 
