--- a/views/admin/relatorio/relatorio_clientes.njk
+++ b/views/admin/relatorio/relatorio_clientes.njk
@@ -65,15 +65,17 @@
             {%block content%}
         
 
-                <div class="ver-menu relatorio">
-                <ul>
-                    <li><a href="/dashboard/relatorios">Relatorios</a> ></li>
-                </ul>
-                <ul>
-                </ul>
-                <ul>
-                    <li> Relatorio Clientes </li>
-                </ul>
+            <div class="ver-menu relatorio">
+                <nav>
+                    <ul>
+                        <li><a href="/dashboard/relatorios">Relatorios</a> ></li>
+                    </ul>
+                    <ul>
+                    </ul>
+                    <ul>
+                        <li> Relatorio Clientes </li>
+                    </ul>
+                </nav>
             </div>
 
 
