--- a/views/admin/relatorio/relatorio_financeiro.njk
+++ b/views/admin/relatorio/relatorio_financeiro.njk
@@ -65,14 +65,16 @@
             {%block content%}
 
             <div class="ver-menu relatorio">
-                <ul>
-                    <li><a href="/dashboard/relatorios">Relatorios</a> ></li>
-                </ul>
-                <ul>
-                </ul>
-                <ul>
-                    <li> Relatorio Financeiro </li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="/dashboard/relatorios">Relatorios</a> ></li>
+                    </ul>
+                    <ul>
+                    </ul>
+                    <ul>
+                        <li> Relatorio Financeiro </li>
+                    </ul>
+                </nav>
             </div>
 
 
