--- a/views/atendente/agendamento/criar-novo.njk
+++ b/views/atendente/agendamento/criar-novo.njk
@@ -81,16 +81,18 @@
         {% endfor %}
 
       <div class="ver-menu">
-            <ul>
-                <li><a href="/acadmin/agendamento">Agendamentos</a> ></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/acadmin/agendamento">Agendamentos</a> ></li>
+                </ul>
 
-             <ul>
-                <li><a  href="/acadmin/agendamento/criar/search/cliente">Cliente</a> ></li>
-            </ul>
-             <ul>
-                <li> Novo agendamento </li>
-            </ul>
+                <ul>
+                    <li><a  href="/acadmin/agendamento/criar/search/cliente">Cliente</a> ></li>
+                </ul>
+                <ul>
+                    <li> Novo agendamento </li>
+                </ul>
+            </nav>
         </div>
 
 
