--- a/views/atendente/agendamento/historico.njk
+++ b/views/atendente/agendamento/historico.njk
@@ -64,15 +64,17 @@
 
         <h1>{{nomeCompleto}} - Historico de Agendamentos</h1>
        <div class="ver-menu">
-            <ul>
-                <li><a href="/acadmin/agendamento">Agendamentos</a> ></li>
-            </ul>
-            <ul>
-                <li><a href="/acadmin/agendamento/criar/search/cliente">Cliente</a> ></li>
-            </ul>
-            <ul>
-                <li> Historico de Agendamento </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/acadmin/agendamento">Agendamentos</a> ></li>
+                </ul>
+                <ul>
+                    <li><a href="/acadmin/agendamento/criar/search/cliente">Cliente</a> ></li>
+                </ul>
+                <ul>
+                    <li> Historico de Agendamento </li>
+                </ul>
+            </nav>
         </div>
 
 
