--- a/views/atendente/financeiro/historico.njk
+++ b/views/atendente/financeiro/historico.njk
@@ -64,15 +64,17 @@
 
         <h1>Historico de pagamentos</h1>
        <div class="ver-menu">
-            <ul>
-                <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> ></li>
-            </ul>
-            <ul>
-                <li><a href="/acadmin/financeiro/criar/search">Cliente</a> ></li>
-            </ul>
-            <ul>
-                <li> Historico de pagamento </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> ></li>
+                </ul>
+                <ul>
+                    <li><a href="/acadmin/financeiro/criar/search">Cliente</a> ></li>
+                </ul>
+                <ul>
+                    <li> Historico de pagamento </li>
+                </ul>
+            </nav>
         </div>
 
 
