--- a/views/atendente/financeiro/search-cliente.njk
+++ b/views/atendente/financeiro/search-cliente.njk
@@ -63,12 +63,14 @@
         <h1>Escolha o cliente</h1>
 
         <div class="ver-menu">
-            <ul>
-                <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> </li>
-            </ul>
-            <ul>
-                <li>> Cliente </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> </li>
+                </ul>
+                <ul>
+                    <li>> Cliente </li>
+                </ul>
+            </nav>
         </div>
 
         <div class="table-wrapper">
