--- a/views/portal/agendamento/criar-agendamento.njk
+++ b/views/portal/agendamento/criar-agendamento.njk
@@ -68,12 +68,14 @@
         {% endfor %}
 
       <div class="ver-menu">
-            <ul>
-                <li><a href="/portal/agendamento">Agendamentos</a> ></li>
-            </ul>
-             <ul>
-                <li> Novo agendamento </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/portal/agendamento">Agendamentos</a> ></li>
+                </ul>
+                <ul>
+                    <li> Novo agendamento </li>
+                </ul>
+            </nav>
         </div>
 
 
