--- a/views/portal/agendamento/historico.njk
+++ b/views/portal/agendamento/historico.njk
@@ -52,13 +52,15 @@
 
         <h1>{{nomeCompleto}} - Historico de Agendamentos</h1>
        <div class="ver-menu">
-            <ul>
-                <li><a href="/portal/agendamento">Agendamentos</a> ></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/portal/agendamento">Agendamentos</a> ></li>
+                </ul>
 
-            <ul>
-                <li> Historico de Agendamento </li>
-            </ul>
+                <ul>
+                    <li> Historico de Agendamento </li>
+                </ul>
+            </nav>
         </div>
 
 
