--- a/views/portal/financeiro/user-pagamentos.njk
+++ b/views/portal/financeiro/user-pagamentos.njk
@@ -51,7 +51,7 @@
         <div class="finance-wrapper">
             <h1>Financeiro </h1>
 
-            <div class="title table-nav">
+            <div class="title table-nav user-pagamentos">
                         <div class="filtro-container">
                             <label for="filtro">Filtrar por Status:</label>
                             <select name="filtro" id="filtro">
