--- a/views/admin/agendamento/search-cliente.njk
+++ b/views/admin/agendamento/search-cliente.njk
@@ -66,12 +66,14 @@
         <h1>Escolha o cliente</h1>
 
         <div class="ver-menu">
-            <ul>
-                <li><a href="/dashboard/agendamento">Agendamentos</a> </li>
-            </ul>
-            <ul>
-                <li>> Cliente </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/dashboard/agendamento">Agendamentos</a> > </li>
+                </ul>
+                <ul>
+                    <li> Cliente </li>
+                </ul>
+            </nav>
         </div>
 
         {% for mensagem in msgErro %}
