--- a/views/admin/financeiro/search-cliente.njk
+++ b/views/admin/financeiro/search-cliente.njk
@@ -66,12 +66,14 @@
         <h1>Escolha o cliente</h1>
 
         <div class="ver-menu">
-            <ul>
-                <li><a href="/dashboard/financeiro/pagamentos">Pagamentos</a> </li>
-            </ul>
-            <ul>
-                <li>> Cliente </li>
-            </ul>
+           <nav>
+                <ul>
+                    <li><a href="/dashboard/financeiro/pagamentos">Pagamentos</a> </li>
+                </ul>
+                <ul>
+                    <li>> Cliente </li>
+                </ul>
+           </nav>
         </div>
 
         <div class="table-wrapper">
