--- a/views/atendente/financeiro/criar-pagamento.njk
+++ b/views/atendente/financeiro/criar-pagamento.njk
@@ -62,15 +62,17 @@
         <h1>Nova Cobrança</h1>
 
         <div class="ver-menu">
-            <ul>
-                <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> ></li>
-            </ul>
-            <ul>
-                <li> <a href="/acadmin/financeiro/criar/search">Cliente</a>  > </li>
-            </ul>
-            <ul>
-                <li> Nova Cobrança </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="/acadmin/financeiro/pagamentos">Pagamentos</a> ></li>
+                </ul>
+                <ul>
+                    <li> <a href="/acadmin/financeiro/criar/search">Cliente</a>  > </li>
+                </ul>
+                <ul>
+                    <li> Nova Cobrança </li>
+                </ul>
+            </nav>
         </div>
 
         <div class="form-wrapper">
