--- a/views/portal/portal.njk
+++ b/views/portal/portal.njk
@@ -52,8 +52,9 @@
             <main>
                 <nav class="rapid-menu">
                     <ul>
-                        <li><a href="/portal/agendamento" class="rapid-card">Agendamento</a></li>
+                        <li><a href="/portal/agendamento" class="rapid-card">Agendamentos</a></li>
                         <li><a href="/portal/agendamento/criar/novo/" class="rapid-card">Novo Agendamento</a></li>
+                        <li><a href="/portal/agendamento/historico/" class="rapid-card">Historico de Agendamento</a></li>
                         <li><a href="/portal/financeiro" class="rapid-card">Financeiro</a></li>
                     </ul>
                     
