--- a/public/styles/pagamentos.css
+++ b/public/styles/pagamentos.css
@@ -3,7 +3,6 @@
 }
 
 
-
 /* finance menu */
 
 #finance-menu{
@@ -63,8 +62,8 @@
 
     color: white;
     background-color: #008080;
+    font-weight: bold;
 }
-
 
 .not-found{
     padding: 30px 0;
