remove extra comments

--- a/views/login/esqueci_senha.njk
+++ b/views/login/esqueci_senha.njk
@@ -19,7 +19,7 @@
 
             <div id="error"></div>
 
-            <form method="post" action="/esqueci_senha" id="form">
+            <form method="post" action="/reset_senha" id="form">
                 <div class="input-wrapper">
                     <label for="email">Email </label>
                     <input type="text" name="email" id="email" placeholder="seu@email.com">
@@ -29,8 +29,6 @@
                 
                 <a href="/login"  target="" rel="noopener noreferrer">Efetuar Login</a>
             </form>
-
-
         </div>
 
        </main>
