--- a/views/admin/relatorio/financeiro/completo.njk
+++ b/views/admin/relatorio/financeiro/completo.njk
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio Financeiro</title>
-    {# <link rel="stylesheet" href="/styles/relatorioModel.css"> #}
-    {# <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> #}
    <style>
 
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
@@ -92,7 +90,6 @@
             grid-template-columns:  25% 25% 25% 25%;
 
             width: 100%;
-            /*background-color: #dc3545;*/
 
             color: white;
             border-top-left-radius: 5px ;
@@ -132,7 +129,6 @@
             grid-template-columns:  25% 25% 25% 25%;
 
             width: 100%;
-            /*background-color: #dc3545;*/
 
             color: white;
             border-bottom-left-radius: 5px ;
@@ -168,7 +164,6 @@
     .saldo-final .finance-result ul{
             display: grid;
 
-            /*grid-template-columns:  25% 25% 25% 25%;*/
             grid-template-columns:  1fr;
 
             width: 100%;
@@ -189,10 +184,6 @@
             padding: 10px;
         }
     
-
-   /* .tabela-grafico .tabelas.Maisde1{
-        height: 1128px;
-    }*/
 
     /* ? Apenas grafico*/
         .apenas-grafico .row{
@@ -277,7 +268,7 @@
                     </div>
                     
 
-                {# SAIDAS  #}
+                {# ! SAIDAS  #}
                 {% if boletoMeses.saidas.length > 1 %}
                     {% set ultimoMes = boletoMeses.saidas.length - 1 %}
                         <h2 >Saidas Entre o mês de {{boletoMeses.saidas[0].mes}} e {{boletoMeses.saidas[ultimoMes].mes}} de 2023 </h2>
@@ -331,22 +322,11 @@
                             </div>
                 </div>
 
-                {# Saldo final #}
+                {#! Saldo final #}
                 <div class="saldo-final tabela">
                     <h2>Saldo final</h2>
 
                     <div class="finance-result">
-                            {# <ul>
-                                <li>Em {{mesesEntrada}} meses<div class="filter-desc"></div></li>
-                                <li> o saldo final <div class="filter-data"></div></li>
-                        
-                                <li> foi
-                                    {% if totalEntrada > totalSaida %}
-                                        positivo com o acumulo de
-                                    {% endif %}
-                                </li>
-                                <li>R$ {{totalEntrada - totalSaida}} em caixa</li>
-                            </ul> #}
                             <ul>
                                 <li>Em {{mesesEntrada}} meses o saldo final foi
                                     {% if totalEntrada > totalSaida %}
@@ -566,17 +546,6 @@
                         <h2>Saldo final</h2>
 
                         <div class="finance-result">
-                                {# <ul>
-                                    <li>Em {{mesesEntrada}} meses<div class="filter-desc"></div></li>
-                                    <li> o saldo final <div class="filter-data"></div></li>
-                            
-                                    <li> foi
-                                        {% if totalEntrada > totalSaida %}
-                                            positivo com o acumulo de
-                                        {% endif %}
-                                    </li>
-                                    <li>R$ {{totalEntrada - totalSaida}} em caixa</li>
-                                </ul> #}
                                 <ul>
                                     <li>Em {{mesesEntrada}} meses o saldo final foi
                                         {% if totalEntrada > totalSaida %}
@@ -668,11 +637,7 @@ https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js
                     label: 'Entradas por Quantidade',
                     data: quantidadeEntradaArray,
                     backgroundColor:
-                    //  'rgba(255, 0, 0, 0.8)',
-                    //  'rgba(0, 141, 255, 0.8)',
-                    // 'rgba(205, 255, 0, 0.8)',
                         'rgba(0, 255, 40, 0.6)',
-                    //  'rgba(120, 0, 255, 0.8)'
                     borderWidth: 3,
                     }, 
                     {
@@ -754,11 +719,7 @@ https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js
                         label: 'Entradas por Valor R$',
                         data: valorEntradaArray,
                         backgroundColor: 
-                        //  'rgba(255, 0, 0, 0.8)',
-                        //  'rgba(0, 141, 255, 0.8)',
-                        //  'rgba(205, 255, 0, 0.8)',
                             'rgba(0, 255, 40, 0.6)',
-                        //  'rgba(120, 0, 255, 0.8)'
 
                         borderWidth: 5,
                     },
@@ -767,10 +728,6 @@ https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js
                         data: valorSaidaArray,
                         backgroundColor: 
                          'rgba(255, 0, 0, 0.6)',
-                        //  'rgba(0, 141, 255, 0.8)',
-                        //  'rgba(205, 255, 0, 0.8)',
-                        //    'rgba(0, 255, 40, 0.8)',
-                        //  'rgba(120, 0, 255, 0.8)'
                         borderWidth: 5,
                         
                     }
