--- a/views/atendente/gerenciamento/clientes/ver.njk
+++ b/views/atendente/gerenciamento/clientes/ver.njk
@@ -68,9 +68,19 @@
                 <li> / {{clienteAcademia.nome}} {{clienteAcademia.sobrenome}} </li>
             </ul>
 
-             <span>
+             
+
+            <div class="clientes-btns">
+                <span class="agenda">
+                    <a class="editar" href="/acadmin/agendamento/historico/{{clienteAcademia._id}}">Agendamentos</a>
+                </span>
+                <span class="payment">
+                    <a class="editar" href="/acadmin/financeiro/pagamento/historico/{{clienteAcademia._id}}">Pagamentos</a>
+                </span>
+                <span>
                 <a class="editar" href="/acadmin/gerenciamento/clientes/edit/{{clienteAcademia._id}}">Editar</a>
             </span>
+            </div>
         </div>
 
      
